# PaintMatch-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  chat.py  paints.py  users.py
app/core/: __init__.py  config.py  exceptions.py  llm_config.py  logging_config.py  ports.py  prompts.py  security.py
app/crud/: __init__.py  crud_paint.py  crud_user.py
app/data/vector_cache/faiss_index_a1d3f798d9907cfd44881f4e09ab0db1/: index.pkl
app/data/vector_cache/faiss_index_aaae74217142daf65725561aab0b2015/: index.faiss  index.pkl
app/db/: session.py
app/models/: __init__.py  paint.py  user.py
app/schemas/: __init__.py  chat.py  paint.py  user.py
app/services/: __init__.py  chat_service.py
app/services/ai/: __init__.py  agent_builder.py  image_generator.py  paint_repository.py  rag_builder.py
docs/: DOCKER_MEMORY.md
scripts/: create_tables.py  entrypoint.sh  load_data.py  test_crud.py
tests/: conftest.py
tests/unit/: test_chat_service.py  test_image_generator.py  test_llm_config.py  test_ports.py  test_rag_builder.py  test_security.py
