[project]
name = "paintmatch-ai"
version = "0.1.0"
description = "Chatbot integrado à API do Google AI para recomendação de tintas Suvinil usando RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # AI/LLM
    "google-genai>=1.55.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.0",

    # Vector Store
    "faiss-cpu>=1.7.0",

    # Data Processing
    "pandas>=2.0.0",

    # Authentication & Security
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.5.0",

    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Validation
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
# Optional heavy dependencies, install with: uv sync --extra monitoring
monitoring = [
    "sentry-sdk>=2.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.8",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
# Relax strictness for ORM/dynamic code
warn_return_any = false
check_untyped_defs = false
disallow_untyped_defs = false
